# Hacettepe-Assignments-Term3

./: README.md
Assignment 3/: CMakeLists.txt  CargoStation.cpp  CargoStation.h  DoublyLinkedList.cpp  DoublyLinkedList.h  Main.cpp  Package.h  Queue.h  README.md  RegionalManager.cpp  RegionalManager.h  Stack.h  Truck.cpp  Truck.h
Assignment1/: CMakeLists.txt  Card.cpp  Card.h  Croupier.cpp  Croupier.h  Foundation.cpp  Foundation.h  FoundationArea.cpp  FoundationArea.h  GameBoard.cpp  GameBoard.h  Main.cpp  Pile.cpp  Pile.h  Stock.cpp  Stock.h  TableauArea.cpp  TableauArea.h  Waste.cpp  Waste.h
Assignment2/: CMakeLists.txt  LibraryPC.cpp  LibraryPC.h  LibrarySystem.cpp  LibrarySystem.h  LinkedListCustomers.cpp  LinkedListCustomers.h  LinkedListMovie.cpp  LinkedListMovie.h  Main.cpp  UserNode.h
Assignment4/: CMakeLists.txt  EvilCorp.cpp  EvilCorp.h  HuffmanEncoder.cpp  HuffmanEncoder.h  HuffmanHacker.cpp  HuffmanHacker.h  Main.cpp  Makefile  README.md  input.txt
